made the model more intellijent for detetcting secrets and other issues.